; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_ao_pulse.c_map_digital_format.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_ao_pulse.c_map_digital_format.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PA_ENCODING_AC3_IEC61937 = common dso_local global i32 0, align 4
@PA_ENCODING_EAC3_IEC61937 = common dso_local global i32 0, align 4
@PA_ENCODING_MPEG_IEC61937 = common dso_local global i32 0, align 4
@PA_ENCODING_DTS_IEC61937 = common dso_local global i32 0, align 4
@PA_ENCODING_ANY = common dso_local global i32 0, align 4
@PA_ENCODING_PCM = common dso_local global i32 0, align 4
@PA_ENCODING_DTSHD_IEC61937 = common dso_local global i32 0, align 4
@PA_ENCODING_MPEG2_AAC_IEC61937 = common dso_local global i32 0, align 4
@PA_ENCODING_TRUEHD_IEC61937 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @map_digital_format to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @map_digital_format(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %13 [
    i32 133, label %5
    i32 130, label %7
    i32 129, label %9
    i32 132, label %11
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @PA_ENCODING_AC3_IEC61937, align 4
  store i32 %6, i32* %2, align 4
  br label %21

7:                                                ; preds = %1
  %8 = load i32, i32* @PA_ENCODING_EAC3_IEC61937, align 4
  store i32 %8, i32* %2, align 4
  br label %21

9:                                                ; preds = %1
  %10 = load i32, i32* @PA_ENCODING_MPEG_IEC61937, align 4
  store i32 %10, i32* %2, align 4
  br label %21

11:                                               ; preds = %1
  %12 = load i32, i32* @PA_ENCODING_DTS_IEC61937, align 4
  store i32 %12, i32* %2, align 4
  br label %21

13:                                               ; preds = %1
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @af_fmt_is_spdif(i32 %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %13
  %18 = load i32, i32* @PA_ENCODING_ANY, align 4
  store i32 %18, i32* %2, align 4
  br label %21

19:                                               ; preds = %13
  %20 = load i32, i32* @PA_ENCODING_PCM, align 4
  store i32 %20, i32* %2, align 4
  br label %21

21:                                               ; preds = %19, %17, %11, %9, %7, %5
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @af_fmt_is_spdif(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
